--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
+    "primeng": "^13.4.2-lts",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
